Fix horizontal scroll (100vw to 100%)

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10,7 +10,7 @@ main section:nth-child(odd) {
 }
 
 .section {
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
